add switch feature demo